# demo_fastapi

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/: __init__.py  deps.py
apps/user/: views.py
migrations/: env.py
migrations/versions/: c757a0564811_create_aws_s3_avatar.py  f8875fba9e5d_create_user_model.py
models/: user.py
static/js/: avatar.js
templates/: layout.html
templates/errors/: 404.html
templates/users/: edit.html  index.html  new.html  show.html
utils/: s3.py
